chore(*): clean code